--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -29,6 +29,19 @@
     />
   </mat-form-field>
 
+  <div *ngSwitchCase="'date'">
+    <mat-form-field>
+      <input
+        matInput
+        [matDatepicker]="datepicker"
+        [(ngModel)]="formData[field.name]"
+        placeholder="Choose a date"
+      />
+      <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
+      <mat-datepicker #datepicker></mat-datepicker>
+    </mat-form-field>
+  </div>
+
   <mat-form-field *ngSwitchCase="'enum'">
     <mat-label>{{ field.displayName }}</mat-label>
     <mat-select
@@ -54,7 +67,9 @@
     />
 
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-      <mat-option *ngFor="let option of (field.refOptions)" [value]="option">{{ option[field.refName] }}</mat-option>
+      <mat-option *ngFor="let option of field.refOptions" [value]="option">{{
+        option[field.refName]
+      }}</mat-option>
     </mat-autocomplete>
   </mat-form-field>
 
