--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -36,9 +36,11 @@
         [matDatepicker]="datepicker"
         [(ngModel)]="formData[field.name]"
         placeholder="Choose a date"
+        class="date"
+        disabled
       />
       <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
-      <mat-datepicker #datepicker></mat-datepicker>
+      <mat-datepicker #datepicker disabled="false"></mat-datepicker>
     </mat-form-field>
   </div>
 
