--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -1,44 +1,23 @@
 <ng-container [ngSwitch]="field.type">
   <mat-form-field *ngSwitchCase="'string'">
-    <input
-      matInput
-      [(ngModel)]="formData[field.name]"
-      [name]="field.name"
-      [placeholder]="field.displayName"
-      [required]="field.required"
-    />
+    <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+      [required]="field.required" />
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'textarea'">
-    <textarea
-      matInput
-      [(ngModel)]="formData[field.name]"
-      [name]="field.name"
-      [placeholder]="field.displayName"
-      [required]="field.required"
-    ></textarea>
+    <textarea matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+      [required]="field.required"></textarea>
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'number'">
-    <input
-      matInput
-      [(ngModel)]="formData[field.name]"
-      [name]="field.name"
-      [placeholder]="field.displayName"
-      [required]="field.required"
-    />
+    <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+      [required]="field.required" />
   </mat-form-field>
 
   <div *ngSwitchCase="'date'">
     <mat-form-field>
-      <input
-        matInput
-        [matDatepicker]="datepicker"
-        [(ngModel)]="formData[field.name]"
-        [placeholder]="field.displayName"
-        class="date"
-        disabled
-      />
+      <input matInput [matDatepicker]="datepicker" [(ngModel)]="formData[field.name]" [placeholder]="field.displayName"
+        class="date" disabled />
       <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
       <mat-datepicker #datepicker disabled="false"></mat-datepicker>
     </mat-form-field>
@@ -46,11 +25,7 @@
 
   <mat-form-field *ngSwitchCase="'enum'">
     <mat-label>{{ field.displayName }}</mat-label>
-    <mat-select
-      [(ngModel)]="formData[field.name]"
-      [name]="field.name"
-      [required]="field.required"
-    >
+    <mat-select [(ngModel)]="formData[field.name]" [name]="field.name" [required]="field.required">
       <mat-option *ngFor="let enum of field.enumList" [value]="enum.value">{{
         enum.value
       }}</mat-option>
@@ -58,17 +33,11 @@
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'ref'">
-    <input
-      type="text"
-      matInput
-      [(ngModel)]="formData[field.name]"
-      [name]="field.name"
-      [placeholder]="field.displayName"
-      [required]="field.required"
-      [matAutocomplete]="auto"
-    />
+    <input type="text" matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+      [required]="field.required" [matAutocomplete]="auto" />
 
-    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="field.refChange && field.refChange($event, formData)">
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn"
+      (optionSelected)="field.refChange && field.refChange($event, formData)">
       <mat-option *ngFor="let option of field.refOptions" [value]="option">{{
         option[field.refName]
       }}</mat-option>
@@ -80,25 +49,15 @@
       <mat-list-item>{{ field.displayName }}</mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
-    <app-standard-form-field
-      [field]="objectField"
-      [(formData)]="formData[field.name]"
-      *ngFor="let objectField of field.fields"
-    ></app-standard-form-field>
+    <app-standard-form-field [field]="objectField" [(formData)]="formData[field.name]"
+      *ngFor="let objectField of field.fields"></app-standard-form-field>
   </div>
 
   <div class="form-field-array" *ngSwitchCase="'array'">
     <mat-list>
-      <mat-list-item
-        >{{ field.displayName }}
-        <button
-          type="button"
-          mat-icon-button
-          [matTooltip]="'Add New ' + field.childName"
-          matTooltipPosition="above"
-          color="primary"
-          (click)="onAddItemInArray(formData[field.name])"
-        >
+      <mat-list-item>{{ field.displayName }}
+        <button type="button" mat-icon-button [matTooltip]="'Add New ' + field.childName" matTooltipPosition="above"
+          color="primary" (click)="onAddItemInArray(formData[field.name])">
           <mat-icon>add</mat-icon>
         </button>
       </mat-list-item>
@@ -106,13 +65,39 @@
     </mat-list>
     <div *ngFor="let item of formData[field.name]; let i = index">
       <b>{{ field.childName + ' ' + (i + 1) }}</b>
-      <app-standard-form-field
-        [field]="objectField"
-        [(formData)]="item"
-        [parentField]="field"
-        *ngFor="let objectField of field.fields"
-      ></app-standard-form-field>
+      <app-standard-form-field [field]="objectField" [(formData)]="item" [parentField]="field"
+        *ngFor="let objectField of field.fields"></app-standard-form-field>
     </div>
+  </div>
+
+  <div class="form-field-table" *ngSwitchCase="'table'">
+    <h4>{{ field.displayName }}</h4>
+    <table class="mat-elevation-z2 standard-table">
+      <thead>
+        <tr>
+          <th *ngFor="let col of field.fields">{{ col.displayName }}</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of formData[field.name]; let i = index">
+          <td *ngFor="let col of field.fields">
+            <app-standard-form-field [field]="col" [(formData)]="item" [parentField]="field"></app-standard-form-field>
+          </td>
+          <td>
+            <div class="btn-group">
+              <button type="button" mat-icon-button matTooltip="Add" matTooltipPosition="above"
+                (click)="onAddItemInArray(formData[field.name])" *ngIf="i === formData[field.name].length - 1">
+                <mat-icon class="icon-xs">add</mat-icon>
+              </button>
+              <button type="button" mat-icon-button matTooltip="Remove" matTooltipPosition="above" color="warn" (click)="onRemoveItemFromArray(formData[field.name], i)" *ngIf="formData[field.name].length > 1">
+                <mat-icon class="icon-xs">delete</mat-icon>
+              </button>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <div *ngSwitchCase="'image'">
@@ -121,23 +106,12 @@
       <button mat-stroked-button type="button" (click)="filePicker.click()">
         <mat-icon>photo</mat-icon> Upload {{ field.displayName }}
       </button>
-      <input
-        type="file"
-        class="input-file"
-        #filePicker
-        (change)="onImagePicked($event, field.name)"
-      />
+      <input type="file" class="input-file" #filePicker (change)="onImagePicked($event, field.name)" />
     </div>
 
-    <div
-      class="image-preview"
-      *ngIf="(imagePreview !== '' && imagePreview) || formData[field.name]"
-    >
+    <div class="image-preview" *ngIf="(imagePreview !== '' && imagePreview) || formData[field.name]">
       <img [src]="imagePreview" *ngIf="imagePreview !== '' && imagePreview" />
-      <img
-        [src]="formData[field.name]"
-        *ngIf="formData[field.name] && !imagePreview"
-      />
+      <img [src]="formData[field.name]" *ngIf="formData[field.name] && !imagePreview" />
     </div>
   </div>
 </ng-container>
