--- a/ng-app/src/app/customer/invoice-list/invoice-list.component.html
+++ b/ng-app/src/app/customer/invoice-list/invoice-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Invoice" domainName="invoice" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Invoice" domainName="invoice" [columns]="columns" [filterList]="filterList" [includes]="['customer','event']"></app-standard-list>
