--- a/ng-app/src/app/event/event-view/event-view.component.html
+++ b/ng-app/src/app/event/event-view/event-view.component.html
@@ -46,11 +46,9 @@
       <div class="view-field">
         <h3>
           Services
-          <a
-            mat-icon-button
-            (click)="addItemToEvent('providerService', 'services')"
-            ><mat-icon>edit</mat-icon></a
-          >
+          <a mat-icon-button (click)="addItemToEvent('providerService', 'services')">
+            <mat-icon>edit</mat-icon>
+          </a>
         </h3>
         <p *ngIf="formData.services && formData.services.length === 0">
           No service yet.
@@ -65,18 +63,14 @@
       <div class="view-field">
         <h3>
           Facilities
-          <a
-            mat-icon-button
-            (click)="addItemToEvent('providerFacility', 'facilities')"
-            ><mat-icon>edit</mat-icon></a
-          >
+          <a mat-icon-button (click)="addItemToEvent('providerFacility', 'facilities')">
+            <mat-icon>edit</mat-icon>
+          </a>
         </h3>
         <p *ngIf="formData.facilities && formData.facilities.length === 0">
           No facility yet.
         </p>
-        <ng-container
-          *ngIf="formData.facilities && formData.facilities.length > 0"
-        >
+        <ng-container *ngIf="formData.facilities && formData.facilities.length > 0">
           <p *ngFor="let facility of formData.facilities">
             {{ facility?.providerFacility?.name }} x {{ facility?.quantity }}
             {{ facility?.providerFacility?.unit }}
@@ -86,16 +80,14 @@
       <div class="view-field">
         <h3>
           Stock Items
-          <a mat-icon-button (click)="addItemToEvent('stockItem', 'stockItems')"
-            ><mat-icon>edit</mat-icon></a
-          >
+          <a mat-icon-button (click)="addItemToEvent('stockItem', 'stockItems')">
+            <mat-icon>edit</mat-icon>
+          </a>
         </h3>
         <p *ngIf="formData.stockItems && formData.stockItems.length === 0">
           No stock item yet.
         </p>
-        <ng-container
-          *ngIf="formData.stockItems && formData.stockItems.length > 0"
-        >
+        <ng-container *ngIf="formData.stockItems && formData.stockItems.length > 0">
           <p *ngFor="let stockItem of formData.stockItems">
             {{ stockItem?.stockItem?.name }} x {{ stockItem?.quantity }}
             {{ stockItem?.stockItem?.unit }}
@@ -105,32 +97,32 @@
       <div class="view-field">
         <h3>
           Event Processes
-          <a mat-icon-button (click)="addEventProcessToEvent()"
-            ><mat-icon>edit</mat-icon></a
-          >
+          <a mat-icon-button (click)="addEventProcessToEvent()">
+            <mat-icon>edit</mat-icon>
+          </a>
         </h3>
         <p *ngIf="formData.processes && formData.processes.length === 0">
           No stock item yet.
         </p>
-        <ng-container
-          *ngIf="formData.processes && formData.processes.length > 0"
-        >
-          <p *ngFor="let process of formData.processes">{{ process?.name }} ({{ process?.startFrom | date: 'dd MMMM yyyy' }} - {{ process?.endTo | date: 'dd MMMM yyyy' }})</p>
+        <ng-container *ngIf="formData.processes && formData.processes.length > 0">
+          <p *ngFor="let process of formData.processes">{{ process?.name }}
+            ({{ process?.startFrom | date: 'dd MMMM yyyy' }} - {{ process?.endTo | date: 'dd MMMM yyyy' }})</p>
         </ng-container>
       </div>
     </mat-expansion-panel>
 
-    
+
     <mat-expansion-panel expanded>
-        <mat-expansion-panel-header class="bg-primary">
-          <mat-panel-title>
-            Attendee Information
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        
-        <app-standard-list title="Attendee" domainName="attendee" [columns]="columns" [filterList]="filterList" [includes]="['attendeeGroup', 'event']" [queryModel]="queryModel"></app-standard-list>
+      <mat-expansion-panel-header class="bg-primary">
+        <mat-panel-title>
+          Attendee Information
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <app-standard-list title="Attendee" domainName="attendee" [columns]="columns" [filterList]="filterList"
+        [includes]="['attendeeGroup', 'event']" [queryModel]="queryModel"></app-standard-list>
 
 
-      </mat-expansion-panel>
+    </mat-expansion-panel>
   </mat-card-content>
 </mat-card>
