--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -90,7 +90,8 @@
                 (click)="onAddItemInArray(formData[field.name])" *ngIf="i === formData[field.name].length - 1">
                 <mat-icon class="icon-xs">add</mat-icon>
               </button>
-              <button type="button" mat-icon-button matTooltip="Remove" matTooltipPosition="above" color="warn" (click)="onRemoveItemFromArray(formData[field.name], i)" *ngIf="formData[field.name].length > 1">
+              <button type="button" mat-icon-button matTooltip="Remove" matTooltipPosition="above" color="warn"
+                (click)="onRemoveItemFromArray(formData[field.name], i)" *ngIf="formData[field.name].length > 1">
                 <mat-icon class="icon-xs">delete</mat-icon>
               </button>
             </div>
