--- a/ng-app/src/app/event/registration-form/registration-form.component.html
+++ b/ng-app/src/app/event/registration-form/registration-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Registration Form" domainName="registration-form" [fields]="fields"></app-standard-form>
+<app-standard-form title="Registration Form" domainName="registration-form" [fields]="fields" [includes]="includes"></app-standard-form>
