--- a/ng-app/src/styles.css
+++ b/ng-app/src/styles.css
@@ -99,6 +99,10 @@ table { width: 100%; }
   margin: 0 5px;
 }
 
+.standard-table a:hover {
+  cursor: pointer;
+}
+
 .image-wrapper .input-file {
   visibility: hidden;
 }
@@ -116,3 +120,6 @@ table { width: 100%; }
   height: 100%;
 }
 
+.action-group > * {
+  margin: 0 5px;
+}
