--- a/ng-app/src/app/event/registration-view/registration-view.component.html
+++ b/ng-app/src/app/event/registration-view/registration-view.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card-md">
+<mat-card class="card-md view-page">
   <mat-card-header>
     <mat-card-title>View Registration Form</mat-card-title>
   </mat-card-header>
