--- a/ng-app/src/app/event/event-view/event-view.component.html
+++ b/ng-app/src/app/event/event-view/event-view.component.html
@@ -163,7 +163,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <app-standard-list title="Attendee" domainName="attendee" [columns]="columns" [filterList]="filterList"
+      <app-standard-list title="Attendee" domainName="attendee" [columns]="columns" [filterList]="filterList" [actions]="actions"
         [includes]="['attendeeGroup', 'event']" [queryModel]="queryModel"></app-standard-list>
 
 
